--- a/src/web/resources/sass/app.scss
+++ b/src/web/resources/sass/app.scss
@@ -7,6 +7,8 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+@import '~@fortawesome/fontawesome-free/css/all.min.css';
+
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
@@ -646,4 +648,13 @@ body {
     #wrapper.toggled #sidebar-wrapper {
         margin-left: -15rem;
     }
+}
+
+#container-login {
+    position: relative;
+}
+
+#register-in-login {
+    position: absolute;
+    right: 1rem;
 }
