New Metrics and Alert Working

--- a/src/web/resources/sass/app.scss
+++ b/src/web/resources/sass/app.scss
@@ -658,3 +658,10 @@ body {
     position: absolute;
     right: 1rem;
 }
+
+.myAlert-top {
+    position: fixed;
+    top: 5px;
+    left: 30%;
+    width: 50%;
+}
